[RPP] Fix range labels visibility
Before: http://screencast/cast/NTIxMDgzNDQ4ODc4Njk0NHwyNTFhMjZkYy01MQ

After: http://screencast/cast/NTcwNjA5MzI3NDU5NTMyOHw1ZjYxNWViNC03ZA

Numbers example to check how they truncate: http://screencast/cast/NjQ3MDMyNzA3MTY3MDI3MnxlYTY3ZGNjOS04Zg

Prevent the label from getting outside of the range borders and truncate it instead.

Also the long labels used to disappear unless the range was zoomed in a lot because of the way we were calculating the label visibility.
Instead, if duration text underneath the label fits within the overlay, also show truncated labels.

Bug: 370967066
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5913002
Commit-Queue: Alina Varkki <alinavarkki@chromium.org>

--- a/front_end/panels/timeline/overlays/components/timeRangeOverlay.css
+++ b/front_end/panels/timeline/overlays/components/timeRangeOverlay.css
@@ -21,11 +21,11 @@
 }
 
 .range-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   text-align: center;
   box-sizing: border-box;
-  width: max-content;
-  max-width: 250px;
-  padding: 0 3px;
   pointer-events: all;
   user-select: none;
   color: var(--sys-color-pink);
@@ -38,18 +38,30 @@
   }
 
   &.offScreenLeft {
+    align-items: flex-start;
     text-align: left;
   }
 
   &.offScreenRight {
+    align-items: flex-end;
     text-align: right;
   }
 }
 
 .label-text {
+  /*
+  * The width priority is min-width > max-width > width
+  * When the range itself is smaller that 70px, expand 100% to fill the whole width.
+  * When the range is wider, only expand the textfield to over 70px
+  * if it's needed to fit the label text.
+  */
+  width: 100%;
+  max-width: 70px;
+  min-width: fit-content;
   text-overflow: ellipsis;
-  max-height: 40px;
   overflow: hidden;
+  overflow-wrap: break-word;
+  word-break: break-word;
   margin-bottom: 3px;
   display: -webkit-box;
   white-space: break-spaces;
